[package]
name = "game-temp-1"
version = "0.1.0"
authors = ["Vladimir <azuresplash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "*"
bevy = { version = "*", features = ["dynamic"] }
# bevy_rapier2d = { version = "*", path = "../bevy_rapier/bevy_rapier2d" }
bevy_rapier2d = "0.7"