[package]
name = "game-temp-1"
version = "0.1.0"
authors = ["Vladimir <azuresplash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargosad/reference/manifest.html
[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/bevy_gilrs",
  "bevy/render",
  "bevy/png",
]
native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
rand = "*"
anyhow = "1"
#bevy = {version="0.4", default-features=false,features = [ "dynamic"]}
bevy = {version="0.4", default-features=false}
bevy_webgl2 = {version="0.4", optional=true}
winit = "0.24"
